<resources>
    <string name="app_name">Novigrad</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_register">Don\'t have an account? Register</string>
    <string name="prompt_login">Already have an account? Login</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="logout">logout</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="employee_radio">Employee</string>
    <string name="customer_radio">Customer</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="loading">Loading</string>
    <string name="error_loading_document">Error: could not load the requested document</string>
    <string name="welcome_msg">Welcome %1$s \nYou are a %2$s</string>
</resources>